--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Play:wght@400;700&display=swap"); */
-
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fjalla+One&family=Kanit:wght@200;300;400;600&display=swap");
 
 * {
@@ -22,17 +20,11 @@
 
 body {
   margin: 0;
-  /* font-family: "Play"; */
-  /* font-family: "Bebas Neue", sans-serif; */
-  /* font-family: "Fjalla One", sans-serif; */
+  background-color: var(--clrp-blue-body);
   font-family: "Kanit", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--clrp-blue-body);
 }
-
-/* ------------------------------------------------------ */
-/* -- NAVIGATION -- */
 
 nav {
   display: grid;
@@ -66,9 +58,6 @@ nav {
   border: none;
   border-radius: 4px;
 
-  /* font-family: "Play"; */
-  /* font-family: "Bebas Neue", sans-serif; */
-  /* font-family: "Fjalla One", sans-serif; */
   font-family: "Kanit", sans-serif;
   font-size: 1.1em;
   font-weight: 400;
@@ -80,9 +69,6 @@ nav {
 .nav__connect:hover {
   background-color: var(--clrp-red-connect-hover);
 }
-
-/* ------------------------------------------------------ */
-/* -- FORM -- */
 
 .form {
   display: flex;
@@ -110,12 +96,12 @@ form input[type="text"] {
   background-color: var(--clrp-white-text);
   border: 1px solid var(--clrp-blue-logo);
   font-family: "Kanit", sans-serif;
-  /* font-family: "Bebas Neue", sans-serif; */
-  /* font-family: "Fjalla One", sans-serif; */
+
   color: var(--clrp-blue-body);
   border-radius: 4px;
 
   font-size: 1.1em;
+  font-weight: 300;
 }
 
 form input[type="submit"] {
@@ -130,8 +116,6 @@ form input[type="submit"] {
   border: none;
   border-radius: 4px;
 
-  /* font-family: "Play"; */
-  /* font-family: "Fjalla One", sans-serif; */
   font-family: "Kanit", sans-serif;
   font-size: 1.1em;
   font-weight: 300;
@@ -143,9 +127,6 @@ form input[type="submit"] {
 form input[type="submit"]:hover {
   background-color: var(--clrp-blue-logo);
 }
-
-/* ------------------------------------------------------ */
-/* -- IMAGE -- */
 
 .image {
   display: flex;
@@ -179,8 +160,6 @@ form input[type="submit"]:hover {
   margin: 0 10px;
 }
 
-/* ------------------------------------------------------ */
-/* -- TEXT -- */
 p {
   display: flex;
   justify-content: center;
